--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -6,18 +6,25 @@
   align-items: center;
   color: $ice-white;
   background-color: $deep-black;
-  width: 100px;
-  border: 1px inset $ice-white;
   width: fit-content;
+  border: 1px outset $ice-white;
+  outline: 1px outset;
+  font-size: 1.4rem;
+  white-space: nowrap;
   cursor: pointer;
-  transition: 0.3s;
+  transition: 0.15s ease;
   font: {
-    family: forma-djr-banner, sans-serif;
+    family: forma-djr-display, sans-serif;
     weight: 700;
     style: normal;
   }
-  padding: 0.25em 0.5em;
+  padding: 0.3em 0.5em;
   &:hover {
-    background-color: $deep-black-hover; 
+    background-color: $deep-black-hover;
+    border: 0.5px inset $ice-white;
+  }
+  &:active {
+    background-color: #282828;
+    border: 0.25px inset $ice-white;
   }
 }
