--- a/src/styles/helpers/_variables.scss
+++ b/src/styles/helpers/_variables.scss
@@ -1,6 +1,12 @@
-$ice-white: #f0f5f3;
+$ice-white: rgba(240, 245, 243, 1);
+$ice-white-hover: rgba(240, 245, 243, 0.9);
 $ice-white-disabled: rgba(240, 245, 243, 0.6);
+$ice-white-shadow: rgba(240, 245, 243, 0.1);
 $deep-black: #080808;
 $deep-black-hover: #222222;
-$gradient-text: hsla(33, 100%, 50%, 1);
+$about-link: #ffda89;
+$gradient-text: hsla(23, 100%, 50%, 0.9);
+$gradient-text-light: hsla(33, 100%, 50%, 1);
+$list-marker: rgba(255, 173, 49, 0.776);
 $sunset-gradient: linear-gradient(90deg, #d53369 0%, #daae51 100%);
+$neon-gradient: linear-gradient(120deg, #00ff3c 0%, #00ff51 10%, #00ff5e 16%, #00ff88 26%);
