--- a/src/styles/pages/_index.scss
+++ b/src/styles/pages/_index.scss
@@ -1,83 +1,102 @@
 @import "../helpers/variables";
+@import "breakpoints/breakpoints";
 
-canvas { 
-	display: block; 
-	position: fixed;
-	z-index: -1; // put it to background
-	left: 0; // position it to fill the whole screen
-	top: 0; // position it to fill the whole screen
+.overlay-img {
+  position: absolute;
+  // top: 0;
+  // left: 0;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  mix-blend-mode: hue;
+  pointer-events: none;
+  overflow: hidden;
 }
 
 .main-menu {
-  // position: relative;
-  // z-index: 4;
-  height: 97.5vh;
-  max-width: 1440px;
-  margin: 0 auto;
-  padding-top: 2.5vh;
+  height: 95%;
+  width: 95%;
+  padding: 2.5%;
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
-  place-items: center;
-}
-
-.main-menu-left {
-  grid-column: 1;
-  grid-row: 1 / span 2;
-  width: 100%;
-  height: 100%;
-  display: inline-grid;
   grid-template-columns: 1fr;
   grid-template-rows: 1fr 1fr;
-  row-gap: 15vh;
-  justify-items: center;
+  grid-auto-rows: 1fr;
+  grid-auto-columns: 1fr;
+  grid-auto-flow: column;
+  column-gap: 10%;
+  // justify-content: center;
+  // align-content: center;
+  align-items: center;
 }
-
-.main-menu-header {
-  width: 100%;
-  grid-row: 1;
+.main-menu-left {
+  justify-self: end;
+  grid-row: 1 / span 2;
   grid-column: 1;
-  display: flex;
-  justify-content: center;
-  align-self: end;
-  #main-header {
-    -webkit-text-stroke: 0.75px black;
+  display: grid;
+  grid-template-rows: 50% 50%;
+  grid-template-columns: 1fr;
+  height: 100%;
+  @include media("<=desktop", ">=tablet") {
+    height: 60%;
+  }
+  @include media("<=phone") {
+    justify-self: center;
   }
 }
-
-.main-menu-options {
-  width: 460px;
-  height: 230px;
+.main-menu-upper-left {
+  grid-column: 1;
+  grid-row: 1;
+  align-self: center;
+  justify-self: center;
+  // display: flex;
+  // justify-content: center;
+  @include media("<=phone") {
+    align-self: end;
+    text-align: center;
+    height: 80%;
+  }
+}
+.title-container {
+  white-space: nowrap;
+}
+.gradient-text-light {
+  display: inline-block;
+  white-space: nowrap;
+  color: $gradient-text-light;
+}
+.main-menu-lower-left {
   grid-row: 2;
   grid-column: 1;
   display: grid;
-  grid-template-columns: 20% 80%;
-  grid-template-rows: 1fr 1fr 1fr;
-  align-self: start;
-}
-#projects {
-  grid-column: 2;
-  grid-row: 1;
-  height: 100%;
-}
-#about-me {
-  grid-column: 2;
-  grid-row: 2;
-  height: 100%;
-}
-#contact {
-  grid-column: 2;
-  grid-row: 3;
-  height: 100%;
+  grid-template-columns: 1fr 4fr;
+  grid-template-rows: 1/3fr 1/3fr 1/3fr;
+  row-gap: 2.5%;
+  place-items: start;
+  align-content: start;
+  @include media("<=phone") {
+    align-self: end;
+    justify-self: center;
+    height: 75%;
+  }
 }
 .mmo-selector {
   grid-column: 1;
-  align-self: center;
-  font-family: "Hanson", sans-serif;
-  font-size: 2.75rem;
+  align-self: end;
+  // justify-self: start;
+  // padding-bottom: 25%;
+  // align-self: center;
+  height: 72.5%;
   color: $deep-black;
   text-shadow: -1px -1px 0 $gradient-text, 1px -1px 0 $gradient-text,
     -1px 1px 0 $gradient-text, 1px 1px 0 $gradient-text;
+  font-family: "Hanson", sans-serif;
+  font-size: calc(1.15rem + 2vw);
+  @include media(">=tablet", "<=desktop") {
+    font-size: calc(1.45rem + 1vw);
+  }
+  @include media("<=phone") {
+    font-size: calc(1.5rem + 1.5vh);
+  }
 }
 #position-1 {
   grid-row: 1;
@@ -90,46 +109,62 @@ canvas {
 }
 %option-text {
   cursor: pointer;
-  width: fit-content;
+  // width: 100%;
+  white-space: nowrap;
+  transition: 0.2s;
 }
 .active-link {
   @extend %option-text;
   color: $ice-white;
-  transition: 0.2s;
 }
-.inactive-link {
+.outline {
   @extend %option-text;
   color: $deep-black;
   text-shadow: -1px -1px 0 $ice-white, 1px -1px 0 $ice-white,
     -1px 1px 0 $ice-white, 1px 1px 0 $ice-white;
-  transition: 0.2s;
 }
-.gradient-text {
-  color: $gradient-text;
+#projects-link {
+  grid-column: 2;
+  grid-row: 1;
 }
-
+#about-me-link {
+  grid-column: 2;
+  grid-row: 2;
+}
+#contact-link {
+  grid-column: 2;
+  grid-row: 3;
+}
 .main-menu-right {
+  justify-self: start;
+  align-self: center;
   grid-column: 2;
   grid-row: 1 / span 2;
-  
-  display: inline-grid;
+  display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: repeat(9, 1fr);
   place-items: center;
-  align-content: center;
-  // flex-flow: row wrap;
-  // justify-content: center;
-  // padding-left: 2.5%;
+  @include media("<=phone") {
+    display: none;
+  }
   // align-content: center;
 }
-
 .main-menu-right-text {
-  font-size: 3.5rem;
-  // line-height: 2.5rem;
+  white-space: nowrap;
   color: $gradient-text;
-  cursor: default;
-  text-rendering: optimizeLegibility;
+  // cursor: default;
+  // -webkit-text-stroke: 1px #080808;
 }
+
+// .main-menu-right-text-1 {
+//   @extend %main-menu-right-text;
+// }
+// .main-menu-right-text-2 {
+//   @extend %main-menu-right-text;
+// }
+// .main-menu-right-text-3 {
+//   @extend %main-menu-right-text;
+// }
 
 // #nav-helper {
 //   position: fixed;
@@ -140,39 +175,58 @@ canvas {
 //   // animation: fadeOut 5s ease-in;
 // }
 
-// @keyframes fadeOut {
-//   0% {
-//     opacity: 1;
-//   }
-//   100% {
-//     opacity: 0;
-//   }
+// .loading-screen-container {
+//   width: 100vw;
+//   height: 100vh;
+//   position: relative;
+//   background-color: $deep-black;
+// }
+// #loading-screen-numbers {
+//   position: absolute;
+//   top: 50%;
+//   left: 50%;
+//   transform: translate(-50%, -50%);
+//   font-family: forma-djr-banner, sans-serif;
+//   font-weight: 700;
+//   font-style: normal;
+//   // font-size: 2rem;
 // }
 
-// #projects {
-//   grid-column-start: 2;
-//   grid-row-start: 1;
+// canvas {
+// 	display: block;
+// 	position: fixed;
+// 	z-index: -1; // put it to background
+// 	left: 0; // position it to fill the whole screen
+// 	top: 0; // position it to fill the whole screen
 // }
-// #about {
-//   grid-column-start: 2;
-//   grid-row-start: 2;
+
+// @mixin gradient-overlay($img) {
+//   position: absolute;
+//   width: 100%;
+//   height: 100%;
+//   z-index: 6;
+//   background: {
+//     image: $img;
+//     repeat: no-repeat;
+//     position: center;
+//   }
+//   // filter: hue-rotate($hue);
+//   // -webkit-filter: hue-rotate($hue);
+//   // transition: 0.5s ease-out;
+//   mix-blend-mode: hue;
+//   pointer-events: none;
+//   overflow: hidden;
+//   // transform: translateZ(0);
+//   // backface-visibility: hidden;
+//   // perspective: 1000;
+//   // will-change: transform;
 // }
-// #contact {
-//   grid-column-start: 2;
-//   grid-row-start: 3;
+// .overlay-1 {
+//   @include gradient-overlay(url("../images/plastic1-tiny.jpg"));
 // }
-// #selector-1 {
-//   grid-row: 1;
-//   transition: 0.4s;
-//   transition-timing-function: ease;
+// .overlay-2 {
+//   @include gradient-overlay(url("../images/plastic2-tiny.jpg"));
 // }
-// #selector-2 {
-//   grid-row: 2;
-//   transition: 0.4s;
-//   transition-timing-function: ease;
-// }
-// #selector-3 {
-//   grid-row: 3;
-//   transition: 0.4s;
-//   transition-timing-function: ease;
+// .overlay-3 {
+//   @include gradient-overlay(url("../images/plastic3-tiny.jpg"));
 // }
