--- a/src/styles/pages/_index.scss
+++ b/src/styles/pages/_index.scss
@@ -11,6 +11,9 @@
   mix-blend-mode: hue;
   pointer-events: none;
   overflow: hidden;
+  @include media("<=phone") {
+    height: 50%;
+  }
 }
 
 .main-menu {
@@ -33,14 +36,17 @@
   grid-row: 1 / span 2;
   grid-column: 1;
   display: grid;
-  grid-template-rows: 50% 50%;
+  grid-template-rows: 1fr 50%;
   grid-template-columns: 1fr;
   height: 100%;
   @include media("<=desktop", ">=tablet") {
-    height: 60%;
+    height: initial;
+    align-self: center;
   }
   @include media("<=phone") {
-    justify-self: center;
+    place-self: center;
+    grid-template-rows: 50% 50%;
+    grid-template-columns: 1fr;
   }
 }
 .main-menu-upper-left {
@@ -50,13 +56,18 @@
   justify-self: center;
   // display: flex;
   // justify-content: center;
+  @include media("<=desktop") {
+    align-self: start;
+    text-align: center;
+    height: 100%;
+  }
   @include media("<=phone") {
     align-self: end;
     text-align: center;
-    height: 80%;
+    height: 50%;
   }
 }
-.title-container {
+#main-header {
   white-space: nowrap;
 }
 .gradient-text-light {
@@ -74,9 +85,9 @@
   place-items: start;
   align-content: start;
   @include media("<=phone") {
-    align-self: end;
+    align-self: start;
     justify-self: center;
-    height: 75%;
+    height: 50%;
   }
 }
 .mmo-selector {
@@ -91,11 +102,14 @@
     -1px 1px 0 $gradient-text, 1px 1px 0 $gradient-text;
   font-family: "Hanson", sans-serif;
   font-size: calc(1.15rem + 2vw);
-  @include media(">=tablet", "<=desktop") {
+  @include media("<=desktop") {
     font-size: calc(1.45rem + 1vw);
   }
+  @include media("<=laptop") {
+    font-size: calc(1rem + 0.5vw);
+  }
   @include media("<=phone") {
-    font-size: calc(1.5rem + 1.5vh);
+    font-size: calc(1rem + 1.75vh);
   }
 }
 #position-1 {
@@ -137,13 +151,16 @@
 }
 .main-menu-right {
   justify-self: start;
-  align-self: center;
+  align-self: start;
   grid-column: 2;
   grid-row: 1 / span 2;
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: repeat(9, 1fr);
   place-items: center;
+  @include media("<=desktop") {
+    place-self: center;
+  }
   @include media("<=phone") {
     display: none;
   }
