--- a/src/styles/pages/_contact.scss
+++ b/src/styles/pages/_contact.scss
@@ -15,16 +15,19 @@
   width: 60%;
   height: 100%;
   display: grid;
-  grid-template-rows: 1fr 5fr 1fr 2fr;
-  grid-template-columns: 40% 40% 1fr;
-  row-gap: 2%;
+  grid-template-rows: 2fr 5fr 2fr;
+  grid-template-columns: 1fr;
   place-items: start;
   word-break: break-all;
+  @include media("<=phone") {
+    row-gap: 1%;
+  }
 }
 
 .contact-form-header {
   grid-row: 1;
   grid-column: 1 / span 2;
+  align-self: end;
   color: $deep-black;
   -webkit-text-stroke: 3px transparent;
   text-shadow: 4px 4px 0 transparent, -2px -2px 0 transparent,
@@ -36,6 +39,12 @@
     color: $ice-white;
   }
   cursor: default;
+  @include media(">=tablet", "<=desktop") {
+    font-size: calc(1.25rem + 2vw);
+  }
+  @include media("<=phone") {
+    font-size: calc(1rem + 1vh);
+  }
 }
 #wave-emoji {
   margin-left: 10px;
@@ -55,6 +64,10 @@
     weight: 900;
     style: normal;
   }
+  @include media("<=phone") {
+    font-size: calc(1rem + 0.3vh);
+    line-height: 1.1;
+  }
   color: $deep-black;
   text-shadow: -1px -1px 0 $ice-white, 1px -1px 0 $ice-white,
     -1px 1px 0 $ice-white, 1px 1px 0 $ice-white;
@@ -73,11 +86,15 @@
   border-radius: 8px;
   overflow-y: auto;
   @extend %content-font;
-  word-break: break-all;
+  word-break: break-word;
   caret-color: $ice-white;
   background-color: $deep-black;
   line-height: 1;
   border: 0.5px ridge $ice-white-shadow;
+  @include media("<=phone") {
+    font-size: calc(1rem + 0.3vh);
+    line-height: 1.1;
+  }
 }
 .contact-form-content::placeholder {
   color: $deep-black;
@@ -86,38 +103,80 @@
   border: 0.5px ridge $ice-white-disabled;
   background-color: #090909;
 }
-.name-section {
-  grid-row: 3;
-  grid-column: 1 / span 2;
-  // width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: flex-end;
+// .name-section {
+//   grid-row: 3;
+//   grid-column: 1 / span 2;
+//   // width: 100%;
+//   display: flex;
+//   justify-content: center;
+//   align-items: flex-end;
+// }
+.tl-wrapper {
+  overflow: hidden;
+}
+
+.backdrop {
+  overflow: hidden;
+  position: absolute;
+  z-index: 2;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  height: 100vh;
+  width: 100vw;
+  background-color: $deep-black;
+  opacity: 1;
+}
+.modal {
+  overflow: hidden;
+  position: absolute;
+  z-index: 3;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: grid;
+  grid-template-rows: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 2fr;
+  grid-auto-rows: 1fr;
+  grid-auto-flow: row;
+  place-items: center;
+  background-color: $deep-black;
+  border: 2.5px outset $ice-white;
+  padding: 2%;
 }
 .my-name-is {
   @extend %content-font;
-  margin-top: 2%;
-  padding-left: 2%;
+  grid-row: 1;
+  grid-column: 1;
   cursor: default;
 }
-.email-section {
-  @extend .name-section;
-  grid-row: 3;
-  grid-column: 1;
-  justify-self: start;
+.name-field {
+  grid-row: 1;
+  grid-column: 2;
 }
+// .email-section {
+//   @extend .name-section;
+//   grid-row: 3;
+//   grid-column: 1;
+//   justify-self: start;
+// }
 .my-email-is {
-  @extend .my-name-is;
+  @extend %content-font;
+  grid-row: 2;
+  grid-column: 1;
+  cursor: default;
+}
+.email-field {
+  grid-row: 2;
+  grid-column: 2;
 }
 input[type="text"] {
-  grid-row: 3;
-  grid-column: 2 / span 2;
-  width: 100%;
-  height: 100%;
+  // width: 100%;
+  // height: 100%;
   // margin-right: -2.5%;
-  margin-left: 2.5%;
+  // margin-left: 2.5%;
   background-color: transparent;
-  justify-self: flex-end;
+  // justify-self: flex-end;
   border: 0.5px ridge $ice-white-shadow;
   border-radius: 6px;
   font-family: forma-djr-banner, sans-serif;
@@ -135,12 +194,22 @@ input[type="text"] {
     border: 1px ridge $ice-white-disabled;
   }
 }
-#send {
-  font-size: 1.25rem;
+.errors-section {
   grid-row: 4;
-  grid-column: 2;
-  align-self: end;
+  grid-column: 1 / span 2;
+  width: 100%;
+  color: $ice-white;
+}
+#send {
+  font-size: calc(1rem + 0.5vw);
+  grid-row: 3;
+  // grid-column: 1;
+  place-self: center;
   @include media("<=laptop") {
     font-size: calc(0.75rem + 1vw);
   }
+}
+#send-confirm {
+  @extend #send;
+  grid-column: 1 / span 2;
 }
