added intro animation

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,6 +4,7 @@
   src: url("../fonts/Hanson-Bold.otf") format("opentype");
 }
 
+@import "components/intro";
 @import "components/layout";
 @import "components/navbar";
 @import "components/button";
