--- a/src/styles/components/_layout.scss
+++ b/src/styles/components/_layout.scss
@@ -1,15 +1,26 @@
 @import "../helpers/variables";
 
 .background {
+  // position: absolute;
+  // z-index: 30;
   height: 100vh;
   width: 100vw;
   background-color: $deep-black;
+  // transform-style: preserve-3d;
+  // -webkit-transform-style: preserve-3d;
+  // transition: all 0.8s ease-out;
+  // perspective: 1000px;
+  // -webkit-perspective: 1000px;
+  // transform: translate3d(0, 0, 0);
+  // transform-style: preserve-3d;
+  // -webkit-transform-style: preserve-3d;
+  // contain: content;
   // background-image: url("../images/vinyl-texture.png");
   // background-image: url("../images/warped-gradient.jpg");
   // background-blend-mode: color-dodge;
   // background-position: center;
   // background-size: cover;
-  overflow: hidden;
+  // overflow: hidden;
 }
 
 .film-grain {
