--- a/src/styles/components/_intro.scss
+++ b/src/styles/components/_intro.scss
@@ -1,6 +1,7 @@
 @import "breakpoints/breakpoints";
 
 .intro-container {
+  display: visible;
   position: absolute;
   top: 0;
   left: 0;
@@ -180,6 +181,7 @@
 
   100% {
     height: 0%;
+    display: none;
   }
 }
 
