--- a/src/styles/components/_intro.scss
+++ b/src/styles/components/_intro.scss
@@ -1,39 +1,25 @@
 @import "breakpoints/breakpoints";
 
 .intro-container {
-  display: visible;
-  position: absolute;
+  // display: visible;
+  // position: absolute;
   top: 0;
   left: 0;
   z-index: 8;
   width: 100vw;
   height: 100vh;
-  // margin: 0 auto;
+  margin: 0 auto;
   display: flex;
   justify-content: center;
   align-items: center;
   background: #080808;
-  animation: slide-out-container 3.8s cubic-bezier(0.97, 0.01, 0.36, 0.99) 3s;
+  animation: slide-out-container 2.7s cubic-bezier(0.97, 0.01, 0.36, 0.99) 3.4s;
   animation-fill-mode: forwards;
   // mix-blend-mode: difference;
 }
 
-// .right-wipe {
-//   position: absolute;
-//   top: 0;
-//   left: 0;
-//   // z-index: 9;
-//   height: 0vh;
-//   width: 100vw;
-//   background: #f0f5f3;
-//   mix-blend-mode: difference;
-//   animation: right-wipe 4s cubic-bezier(0.97, 0.01, 0.36, 0.99) 2.8s,
-//     right-wipe-out 4s cubic-bezier(0.97, 0.01, 0.36, 0.99) 4s;
-//   animation-fill-mode: forwards;
-// }
-
 .intro-counter {
-  font-family: forma-djr-banner, sans-serif;
+  font-family: eurostile-extended, sans-serif;
   font-weight: 900;
   font-size: calc(1rem + 0.1vw);
   align-self: flex-end;
@@ -45,20 +31,21 @@
 .intro-text-wrapper {
   color: #f0f5f3;
   position: absolute;
+  z-index: 9;
 }
 
-.intro-text {
-  font-size: calc(2.25rem + 1.4vw);
-  @include media("<=desktop") {
-    font-size: calc(1.95rem + 1.1vw);
-  }
-  @include media("<=laptop") {
-    font-size: calc(1rem + 1.7vw);
-  }
-  @include media("<=phone") {
-    font-size: calc(1rem + 2.5vh);
-  }
-}
+// .intro-text {
+//   font-size: calc(2.25rem + 1.4vw);
+//   @include media("<=desktop") {
+//     font-size: calc(1.95rem + 1.1vw);
+//   }
+//   @include media("<=laptop") {
+//     font-size: calc(1rem + 1.7vw);
+//   }
+//   @include media("<=phone") {
+//     font-size: calc(1rem + 2.5vh);
+//   }
+// }
 
 .text-2,
 .text-4,
@@ -70,16 +57,16 @@
 
 @keyframes blink {
   0% {
-    opacity: 0%;
+    opacity: 0;
   }
   1% {
-    opacity: 100%;
+    opacity: 1;
   }
   99% {
-    opacity: 100%;
+    opacity: 1;
   }
   100% {
-    opacity: 0%;
+    opacity: 0;
   }
 }
 
@@ -131,42 +118,42 @@
 
 @keyframes slide-out {
   0% {
-    opacity: 0%;
+    opacity: 0;
   }
   1% {
-    opacity: 0%;
+    opacity: 0;
   }
 
   19% {
-    opacity: 0%;
+    opacity: 0;
   }
   20% {
-    opacity: 0%;
+    opacity: 0;
   }
 
   39% {
-    opacity: 0%;
+    opacity: 0;
   }
   40% {
-    opacity: 100%;
+    opacity: 1;
   }
 
   59% {
-    opacity: 100%;
+    opacity: 1;
   }
   60% {
-    opacity: 0%;
+    opacity: 0;
   }
 
   79% {
-    opacity: 0%;
+    opacity: 0;
   }
   80% {
-    opacity: 100%;
+    opacity: 1;
   }
 
   100% {
-    opacity: 100%;
+    opacity: 1;
   }
 }
 
@@ -180,10 +167,23 @@
   }
 
   100% {
-    height: 0%;
-    display: none;
+    height: 0;
   }
 }
+
+// .right-wipe {
+//   position: absolute;
+//   top: 0;
+//   left: 0;
+//   // z-index: 9;
+//   height: 0vh;
+//   width: 100vw;
+//   background: #f0f5f3;
+//   mix-blend-mode: difference;
+//   animation: right-wipe 4s cubic-bezier(0.97, 0.01, 0.36, 0.99) 2.8s,
+//     right-wipe-out 4s cubic-bezier(0.97, 0.01, 0.36, 0.99) 4s;
+//   animation-fill-mode: forwards;
+// }
 
 // @keyframes right-wipe {
 //   0% {
