project canvas update

--- a/src/styles/pages/_contact.scss
+++ b/src/styles/pages/_contact.scss
@@ -196,6 +196,7 @@ input[type="text"] {
   color: red;
   text-align: center;
   align-self: end;
+  font-family: forma-djr-display, sans-serif;
 }
 #send {
   font-size: calc(1rem + 0.5vw);
