--- a/src/styles/components/_intro.scss
+++ b/src/styles/components/_intro.scss
@@ -34,18 +34,9 @@
   z-index: 9;
 }
 
-// .intro-text {
-//   font-size: calc(2.25rem + 1.4vw);
-//   @include media("<=desktop") {
-//     font-size: calc(1.95rem + 1.1vw);
-//   }
-//   @include media("<=laptop") {
-//     font-size: calc(1rem + 1.7vw);
-//   }
-//   @include media("<=phone") {
-//     font-size: calc(1rem + 2.5vh);
-//   }
-// }
+.intro-text {
+  font-size: calc(2rem + 1.6vw);
+}
 
 .text-2,
 .text-4,
