--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,7 @@
 @import url("https://use.typekit.net/bbp3rrs.css");
 @font-face {
   font-family: "Hanson";
-  src: url("../fonts/Hanson-Bold.otf") format("opentype");
+  src: url("../fonts/hanson-bold.otf") format("opentype");
 }
 
 @import "components/intro";
