--- a/src/styles/pages/_projects.scss
+++ b/src/styles/pages/_projects.scss
@@ -38,6 +38,15 @@
   grid-column: 2;
   width: 100%;
   height: 100%;
+  // @include media(">=laptop", "<=desktop") {
+  //   height: 60%;
+  // }
+  // @include media(">=desktop", "<=xl-desktop") {
+  //   height: 70%;
+  // }
+  // @include media(">=xl-desktop") {
+  //   height: 75%;
+  // }
 }
 .canvas-wrapper {
   grid-row: 2;
@@ -46,6 +55,17 @@
   width: 100%;
   // position: relative;
   cursor: pointer;
+}
+.canvas-title {
+  grid-row: 2;
+  grid-column: 2;
+  position: absolute;
+  z-index: 1;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -60%);
+  width: 72.5%;
+  mix-blend-mode: screen;
 }
 // .canvas-wrapper:hover .canvas-subtitle {
 //   opacity: 1;
@@ -81,6 +101,31 @@
 .chevron-right-disabled {
   @extend .chevron-right;
   opacity: 0.1;
+}
+
+.project-info {
+  grid-row: 3;
+  grid-column: 2;
+  // width: 75%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  // align-items: flex-end;
+}
+
+.project-info-subtitle {
+  font-family: forma-djr-banner, sans-serif;
+  font-weight: 900;
+  font-style: normal;
+  font-size: calc(1.5rem + 1.25vw);
+  white-space: nowrap;
+}
+
+.project-info-icons {
+  display: inline-block;
+  fill: $ice-white;
+  width: 7.5%;
+  // height: 100%;
 }
 
 // .project-menu {
