custom cursor + safari browser intro

--- a/src/styles/breakpoints/_breakpoints.scss
+++ b/src/styles/breakpoints/_breakpoints.scss
@@ -5,6 +5,8 @@ $breakpoints: (
   "laptop": 992px,
   "desktop": 1200px,
   "xl-desktop": 1440px,
+  "xxl-desktop": 1920px,
+  //xxl was 1860px
 ) !default;
 
 ///
