--- a/src/styles/components/_layout.scss
+++ b/src/styles/components/_layout.scss
@@ -31,7 +31,7 @@
   left: -50%;
   top: -50%;
   overflow: hidden;
-  background-image: url("../images/grain.png");
+  background-image: url("../images/tiny-grain.png");
   mix-blend-mode: overlay;
   opacity: 0.4;
   animation: grain 1.5s steps(6) infinite;
