--- a/src/styles/components/_navbar.scss
+++ b/src/styles/components/_navbar.scss
@@ -26,7 +26,6 @@
 .navbar-chevron {
   margin-top: -0.3rem;
   fill: $ice-white;
-  cursor: pointer;
   transform: scale(2.2);
   transition: 0.2s;
   &:hover {
@@ -37,12 +36,13 @@
   // display: inline;
   height: 100%;
   margin: 0;
-  padding-top: 9px;
+  padding-top: 4.5px;
   font-family: forma-djr-banner, sans-serif;
   font-weight: 700;
   font-style: normal;
   font-size: 1.75rem;
   color: $ice-white;
+  white-space: nowrap;
 }
 .navbar-center {
   display: inline-flex;
@@ -57,7 +57,6 @@
   font-style: normal;
   font-size: 1.45rem;
   color: $ice-white-disabled;
-  cursor: pointer;
   // transition: all 0.25s 0s ease;
 }
 #nav-active {
@@ -80,7 +79,6 @@
 #linked-in {
   // width: 100%;
   height: 100%;
-  cursor: pointer;
   transition: all 0.3s 0s ease;
   transform-origin: center;
   transform: scale(1.5);
