--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,15 +1,15 @@
 @import url("https://use.typekit.net/bbp3rrs.css");
+
 @font-face {
   font-family: "Hanson";
-  src: url("../fonts/hanson-bold.otf") format("opentype");
+  src: url("../fonts/Hanson-Bold.otf") format("opentype");
 }
 
 @import "components/intro";
 @import "components/layout";
+@import "components/cursor";
 @import "components/navbar";
 @import "components/button";
-@import "components/gradient";
-@import "components/video-panels";
 @import "pages/index";
 @import "pages/projects";
 @import "pages/about";
@@ -65,6 +65,10 @@
 //   background-color: $gradient-text;
 // }
 
+* {
+  cursor: none;
+}
+
 .noselect {
   -webkit-touch-callout: none;
   -webkit-user-select: none;
@@ -85,7 +89,6 @@ html {
   // @include media("<=phone") {
   //   overflow-y: auto;
   // }
-  // cursor: none;
 }
 body {
   height: 100%;
@@ -104,7 +107,6 @@ body {
   // @include media("<=phone") {
   //   overflow-y: auto;
   // }
-  // cursor: none;
 }
 // .app {
 //   height: 100%;
@@ -114,7 +116,6 @@ a {
   background-color: transparent;
   text-decoration: none;
   -webkit-text-decoration-skip: objects;
-  cursor: default;
 }
 svg {
   display: block;
