--- a/src/styles/pages/_index.scss
+++ b/src/styles/pages/_index.scss
@@ -4,8 +4,8 @@
 .overlay-img {
   // contain: content;
   // display: contents;
-  position: absolute;
-  z-index: 2;
+  position: fixed;
+  z-index: 3;
   // top: 0;
   // left: 0;
   width: 100%;
@@ -127,6 +127,21 @@
   // transform-style: preserve-3d;
   // -webkit-transform-style: preserve-3d;
 }
+.gradient-text-light--hovered {
+  color: $ice-white;
+}
+.gradient-text-light-safari {
+  display: inline-block;
+  white-space: nowrap;
+  background-color: #f3ec78;
+  background-image: linear-gradient(60deg, #d53369 0%, #daae51 100%);
+  background-size: 100%;
+  background-clip: text;
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -moz-text-fill-color: transparent;
+}
 .main-menu-lower-left {
   grid-row: 2;
   grid-column: 1;
@@ -173,8 +188,29 @@
 #position-3 {
   grid-row: 3;
 }
+#position-1--safari {
+  grid-row: 1;
+  background-color: #f3ec78;
+  background-image: linear-gradient(60deg, #d53369 0%, #daae51 100%);
+  background-size: 100%;
+  background-clip: text;
+  // text-shadow: -1px -1px 0 transparent, 1px -1px 0 transparent,
+  //   -1px 1px 0 transparent, 1px 1px 0 transparent;
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  -webkit-text-stroke: 4px transparent;
+  text-shadow: none;
+  // -webkit-text-fill-color: transparent;
+  // -moz-text-fill-color: transparent;
+}
+#position-2--safari {
+  grid-row: 2;
+}
+#position-3--safari {
+  grid-row: 3;
+}
 %option-text {
-  cursor: pointer;
+  cursor: none;
   // width: 100%;
   white-space: nowrap;
   transition: 0.2s;
@@ -223,6 +259,17 @@
   color: $gradient-text;
   // cursor: default;
   // -webkit-text-stroke: 1px #080808;
+}
+.main-menu-right-text--safari {
+  white-space: nowrap;
+  background-color: #f3ec78;
+  background-image: linear-gradient(60deg, #d53369 0%, #daae51 100%);
+  background-size: 100%;
+  background-clip: text;
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -moz-text-fill-color: transparent;
 }
 
 // .main-menu-right-text-1 {
