--- a/src/styles/pages/_projects.scss
+++ b/src/styles/pages/_projects.scss
@@ -1,5 +1,4 @@
 @import "../helpers/variables";
-@import "../components/video";
 @import "../breakpoints/breakpoints";
 
 .project-menu {
@@ -8,10 +7,10 @@
   width: 100%;
   margin: 0 auto;
   // padding-top: 5vh;
-  z-index: 7;
+  // z-index: 7;
   display: grid;
-  grid-template-rows: 12.5% 75% 12.5%;
-  grid-template-columns: 12.5% 75% 12.5%;
+  grid-template-rows: 10% 80% 10%;
+  grid-template-columns: 10% 80% 10%;
   place-items: center;
 }
 .chevron-left {
@@ -19,7 +18,6 @@
   width: 70%;
   display: flex;
   justify-content: center;
-  cursor: pointer;
   transition: opacity 0.3s ease;
   @include media(">=xl-desktop") {
     width: 60%;
@@ -38,8 +36,8 @@
   grid-column: 2;
   width: 100%;
   height: 100%;
-  // @include media(">=laptop", "<=desktop") {
-  //   height: 60%;
+  // @include media(">=xl-desktop", "<=xxl-desktop") {
+  //   height: 80%;
   // }
   // @include media(">=desktop", "<=xl-desktop") {
   //   height: 70%;
@@ -47,6 +45,9 @@
   // @include media(">=xl-desktop") {
   //   height: 75%;
   // }
+  @include media("<=phone") {
+    height: 80%;
+  }
 }
 .canvas-wrapper {
   grid-row: 2;
@@ -54,19 +55,49 @@
   height: 100%;
   width: 100%;
   // position: relative;
-  cursor: pointer;
+  // cursor: pointer;
 }
-.canvas-title {
-  grid-row: 2;
-  grid-column: 2;
-  position: absolute;
-  z-index: 1;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -60%);
-  width: 72.5%;
-  mix-blend-mode: screen;
+%canvas-title {
+  height: auto;
+  transition: transform 0.8s ease;
+  &:hover {
+    transform: scale(1.02);
+  }
 }
+.canvas-title-1 {
+  @extend %canvas-title;
+  width: 75vw;
+  margin-top: 6.5%;
+}
+.canvas-title-2 {
+  @extend %canvas-title;
+  width: 75vw;
+  margin-top: 6.5%;
+  @include media("<=phone") {
+    width: 79vw;
+  }
+}
+.canvas-title-3 {
+  @extend %canvas-title;
+  width: 33vw;
+  margin-top: 15%;
+  padding-right: 1.5vw;
+  @include media("<=phone") {
+    width: 40vw;
+  }
+}
+// .canvas-title {
+// grid-row: 2;
+// grid-column: 2;
+// position: absolute;
+// z-index: 1;
+// top: 50%;
+// left: 25%;
+// transform: translate(-50%, -60%);
+// width: 125%;
+// height: 125%;
+// mix-blend-mode: screen;
+// }
 // .canvas-wrapper:hover .canvas-subtitle {
 //   opacity: 1;
 //   transition: 0.3s ease;
@@ -89,7 +120,6 @@
   width: 70%;
   display: flex;
   justify-content: center;
-  cursor: pointer;
   transition: opacity 0.3s ease;
   @include media(">=xl-desktop") {
     width: 60%;
@@ -103,23 +133,23 @@
   opacity: 0.1;
 }
 
-.project-info {
-  grid-row: 3;
-  grid-column: 2;
-  // width: 75%;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  // align-items: flex-end;
-}
+// .project-info {
+//   grid-row: 3;
+//   grid-column: 2;
+//   // width: 75%;
+//   display: flex;
+//   justify-content: space-around;
+//   align-items: center;
+//   // align-items: flex-end;
+// }
 
-.project-info-subtitle {
-  font-family: forma-djr-banner, sans-serif;
-  font-weight: 900;
-  font-style: normal;
-  font-size: calc(1.5rem + 1.25vw);
-  white-space: nowrap;
-}
+// .project-info-subtitle {
+//   font-family: forma-djr-banner, sans-serif;
+//   font-weight: 900;
+//   font-style: normal;
+//   font-size: calc(1.5rem + 1.25vw);
+//   white-space: nowrap;
+// }
 
 .project-info-icons {
   display: inline-block;
